--- a/topics_01/index.html
+++ b/topics_01/index.html
@@ -13,6 +13,7 @@
     <script>
       var vis = new LDAvis("#lda", "lda.json");
     </script>
+    <iframe src="https://exploratory.io/viz/0556499381797991/1871898320601052?cb=1502397058264&embed=true" width="100%" height="100%" frameborder="0"></iframe>
   </body>
 
 </html>
