--- a/topics_01/index.html
+++ b/topics_01/index.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>LDAvis</title>
+    <title>LDA: World Bank and Big Data</title>
     <script src="d3.v3.js"></script>
     <script src="ldavis.js"></script>
     <link rel="stylesheet" type="text/css" href="lda.css">
   </head>
 
   <body>
+    <font face="arial, sans-serif" size="12">LDA topics for "World Bank"+"Big Data" on Twitter, 2017</font>
     <div id = "lda"></div>
     <script>
       var vis = new LDAvis("#lda", "lda.json");
     </script>
-    <iframe src="https://exploratory.io/viz/0556499381797991/1871898320601052?cb=1502397058264&embed=true" width="100%" height="100%" frameborder="0"></iframe>
   </body>
 
 </html>
